# guess-the-protocol

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-tests.yml
code/: CMakeLists.txt  main.cpp  parser.cpp  parser.h
res/: CharAInTheBitsequenceAfterSeveralGluedCharReturn1.txt  CharAInTheBitsequenceReturn1.txt  CharAWhileReadingCharBegining.txt  CharAWhileReadingCharEnd.txt  CharAWhileReadingCharMiddle.txt  EOFWhileReadingCharEnd.txt  bitstream.txt  oneSimpleChar.txt  oneSimpleCharStartingWithOnes.txt  severalGluedChar.txt  severalNonGluedChar.txt  test.txt
tests/: branch-test.txt  tests.cpp
